# Sparse-vLLM

./: .gitignore  AGENTS.md  AttentionPredictor笔记.md  README.md  README_ch.md  attentionpredictor原始核心python实现.txt  launch.json  pyproject.toml  《DeltaKV Residual-Based KV Cache Compression via Long-Range Similarity》(1).md
baselines/kvzip/: .gitignore  .gitmodules  LICENSE  README.md  args.py  demo.py  eval.py  pyproject.toml  requirements.txt  test.py
baselines/kvzip/attention/: attn.py  kvcache.py  score.py
baselines/kvzip/csrc/: build.py
baselines/kvzip/csrc/csrc/: cuda_api.cu
baselines/kvzip/data/: __init__.py  load.py  repo.txt  repo_readme.txt  wrapper.py
baselines/kvzip/data/needle/: __init__.py  data.py  utils.py  visualize.py
baselines/kvzip/model/: __init__.py  load.py  monkeypatch.py  template.py  wrapper.py
baselines/kvzip/model/quant_model/: README.md  __init__.py  attn.py  int4_kv.py  monkeypatch.py  setup.py  w8a8kv4_llama.py
baselines/kvzip/results/: metric.py  parse.py  repo_qa_utils.py
baselines/kvzip/utils/: __init__.py  func.py  tester.py
baselines/kvzip/utils/head_score/: duo-scbench_qa_eng-0.pt  llama3.1-8b-scbench_qa_eng-0.pt  qwen2.5-14b-scbench_qa_eng-0.pt  qwen2.5-7b-scbench_qa_eng-0.pt  qwen2.5-7b-scbench_repoqa-0.pt
docs/: 1.md  add-baseline-vs-main.md  add-baseline-vs-main_ch.md  codex-memory-sparsevllm-deltakv_zh.md  hf-vs-sparsevllm-parameter-guide.md  hf-vs-sparsevllm-parameter-guide_ch.md  project-architecture-map_zh.md  quick-answer-nanovllm_zh.md  todo.md  vanilla-inference-flow_zh.md  vanilla-inference-quick-ref_zh.md
(+172 files in other folders)
