[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "kvzip"
version = "0.0.1"

dependencies = [
    "torch==2.3.0",
    "transformers==4.51.3",
    "datasets==3.6.0",
    "accelerate==1.7.0",
    "packaging==25.0",
    "ninja==1.11.1.4",
    "matplotlib",
    "rouge-score",
    "fuzzywuzzy",
    "rich",
    "rouge",
    "tree-sitter==0.21.3",
    "tree-sitter-languages==1.10.2",
    "pandas==2.0.3",
    "numpy==1.26.4",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "future==1.0.0",
    "decorator==5.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
